--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    //Binding
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
+    //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
